--- a/components/tasks/tasks.html
+++ b/components/tasks/tasks.html
@@ -1,15 +1,10 @@
-<form class="form-horizontal" name="taskssearcher">
-  <div class="form-group">
-    <div class="col-sm-10">
-      <select id="criteriaowner" ng-model="tasks.criteriaowner" ng-change="tasks.setFilter()">
-        <option>全て</option>
-        <option ng-repeat="owner in tasks.owners">{{owner}}</option>
-      </select>
-    </div>
-  </div>
-</form>
 
-<hr>
+<ul class="nav nav-tabs">
+  <li class="active"><a data-toggle="tab"  ng-click="tasks.setFilter()">全　て</a></li>
+  <li><a data-toggle="tab" ng-click="tasks.setFilter('大川')">大　川</a></li>
+  <li><a data-toggle="tab" ng-click="tasks.setFilter('藤岡')">藤　岡</a></li>
+  <li><a data-toggle="tab" ng-click="tasks.setFilter('青屋')">青　屋</a></li>
+</ul>
 
 <table class="table table-striped">
     <tr ng-repeat="task in tasks.items | filter: tasks.ownerFileter">
