--- a/app/components/tasks/tasks.html
+++ b/app/components/tasks/tasks.html
@@ -1,3 +1,12 @@
+<div>
+  開発入る前、必ず
+  <ul>
+    <li>npm install</li>
+    <li>bower install</li>
+  </ul>
+をやってから始めてね！ 必要に応じてモジュール追加してるよ！！
+<div>
+<hr>
 <ul class="nav nav-tabs">
   <li class="active"><a data-toggle="tab"  ng-click="tasks.setFilter()">全　て</a></li>
   <li><a data-toggle="tab" ng-click="tasks.setFilter('大川')">大　川</a></li>
